deploy/apps/keydb/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keydb
  namespace: ctfd
spec:
  serviceName: keydb-headless
  replicas: 2
  selector:
    matchLabels:
      app: keydb
  template:
    metadata:
      labels:
        app: keydb
    spec:
      containers:
        - name: keydb
          image: eqalpha/keydb:latest
          imagePullPolicy: IfNotPresent
          command: ["/bin/sh", "-c"]
          args:
            - |
              [...]
          ports:
            - name: keydb
              containerPort: 6379
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            exec:
              command: ["keydb-cli", "ping"]
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            exec:
              command: ["keydb-cli", "ping"]
            initialDelaySeconds: 5
            periodSeconds: 5
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: keydb
                topologyKey: kubernetes.io/hostname
